--- a/src/ExpiryDate.css
+++ b/src/ExpiryDate.css
@@ -1,4 +1,5 @@
 .ExpiryDate p {
   font-family: "Archivo", sans-serif;
   font-size: 1.5em;
+  font-weight: 500;
 }
